<resources>
    <string name="app_name">QIWI App UI</string>
    <string name="search">Поиск</string>
    <string name="_0">0₽</string>
    <string name="popolnit_koshelek">Пополнить Кошелек</string>
    <string name="perevod">Платежи и переводы</string>
    <string name="all">Все</string>
    <string name="qiwi">На QIWI Кошелек</string>
    <string name="poleznoe">Полезное</string>
    <string name="kaplate">Счета к оплате</string>
    <string name="location">Карта терминалов</string>
    <string name="kurs">Курсы валют</string>
    <string name="info">Ограничения в вашем кошельке. Введите свои данные</string>
</resources>